simple index landing page

--- a/src/index.html
+++ b/src/index.html
@@ -3,5 +3,17 @@
         <include src="head.html"></include>
     </head>
     <body>
+        <div class="home">
+            <div class="home__banner">
+                <div class="home__content">
+                    <div class="home__content__logo">
+                        <img src="./images/shrimp.svg">
+                    </div>
+                    <div class="home__content__name">
+                        actionshrimp.com
+                    </div>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
