--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <include src="head.html"></include>
+        <link rel="stylesheet" href="styles.scss">
     </head>
     <body>
         <div class="home">
