guide: icons and css expandy section

--- a/src/sourdough-guide/index.html
+++ b/src/sourdough-guide/index.html
@@ -5,8 +5,71 @@
         <link rel="stylesheet" href="styles.scss">
     </head>
     <body>
-        <div class="sourdough-guide" md>
-            #Sourdough
+        <div class="sourdough-guide">
+            <div md>
+                # Sourdough Guide
+
+                The steps I use to make sourdough, published here so I can complete my orbit around the Nerd Sun (and because someone asked for it).
+
+                This assumes you're making the bread on Saturday, leave it in the fridge overnight and then bake it on Sunday morning.
+            </div>
+
+            <div class="toggle-section">
+                <input id="toggle-starter-method" type="checkbox">
+                <label for="toggle-starter-method">
+                    <icon src="solid/plus-square.svg" class="icon toggle-expand"></icon>
+                    <icon src="solid/minus-square.svg" class="icon toggle-collapse"></icon>
+                    <h2 class="toggle-label-text">Starter method</h2>
+                </label>
+
+                <div class="toggle-content" md>
+                    Assumes you already have a fairly active starter.
+
+                    - I tend to bake most weekends at the minute , and the rest of the time I keep my starter (Doughboy) in the fridge.
+                    - You'll want to add the same amount of flour and water together, but you can add more flour/water relative to the amount of starter if you want the starter to take longer to reach its peak (i.e. you don't always have to do a 1:1:1 ratio when feeding).
+                    - Rye flour geniunely seems to make my starter a lot livelier compared to using just normal flour.
+                    - Have two identical jars (**A** and **B**), it makes life/cleanup a lot easier ([mine are about 500ml](https://www.amazon.co.uk/gp/product/B078WYZZ4Y/ref=ppx_yo_dt_b_asin_title_o08_s00?ie=UTF8&psc=1)).
+
+
+                    ### Feeding the starter before putting it in the fridge for the week
+
+                    Start with:
+
+                    - 20g starter
+                    - 40g flour (20g plain, 20g rye)
+                    - 40g water
+
+                    Shove it all in jar A, this should give the starter a decent amount
+                    of food to get through. It will probably expand a bit and then drop
+                    back down over the course of a few days.
+
+                    If the starter seems inactive when you try and bake with it
+                    (assuming it's usually active), or you're leaving it for longer than
+                    a week, you might want to experiment with adding a bit more
+                    flour/water (in equal parts) to appease the yeast.
+
+
+                    ### Waking it up to bake
+
+                    Friday evening at about 8pm, make the leaven[[1](#leaven)]. Start with:
+
+                    - 15g starter from jar A
+                    - 80g flour (40g plain, 40g rye)
+                    - 80g water
+
+                    Shove it all in jar B and leave it out overnight. Empty out jar A, put it in the dishwasher overnight (we'll need it tomorrow morning)!
+
+                    The idea here is to give the starter plenty of food to eat overnight, so it is roughly approaching its peak the next morning and raring to go when we actually use it in our loaf.
+
+                    I need 140g of starter to make two loaves which this covers, with a bit left over to go back in the fridge.
+
+                    ### Completing the cycle
+
+                    Once you've used the 140g of starter to bake with (see next section), use some of the remainder with flour and water back into the (now clean) jar A to put back into the fridge for next week.
+
+                    <div id="leaven">**[1] leaven**: starter offshot that's actually used to make bread with</div>
+                </div>
+            </div>
         </div>
         <include src="foot.html"></include>
     </body>
