images, starting bread section

--- a/src/sourdough-guide/index.html
+++ b/src/sourdough-guide/index.html
@@ -10,8 +10,10 @@
                 <icon src="solid/flask.svg" class="icon"></icon>
                 <div md># Sourdough Method</div>
             </div>
+            <div class="sourdough-guide__header-image">
+                <img src="../images/bread.jpg">
+            </div>
             <div md>
-
                 The steps I use to make sourdough, published here so I can
                 complete my orbit around the Nerd Sun (and because someone asked
                 for it).
@@ -121,7 +123,17 @@
                     <h2 class="toggle-label-text">Bread method</h2>
                 </label>
 
-                <div class="toggle-content" md></div>
+                <div class="toggle-content" md>
+                    I tried experimenting with different hydrations at the beginning as I got obsessed with the idea of high hydration being somehow fancier. I just ended up with loaves that were big blobs though, and reducing the hydration a bit seemed to fix it. I'm fairly convinced the hydration you can get away with is mostly guided by the flour you use [[1](#foot-1--hydration)]. The quantities I give seem to work for the flour I'm using. If you end up with big blobs try adding a bit less water the next time, even 10 or 20g less water can make a big difference.
+
+                    ### Notes
+
+                    <div id="foot-1--hydration" md>**[1]** although more working of the dough and your shaping skills seem to allow you to get away with slightly higher hydrations</div>
+                </div>
+            </div>
+
+            <div class="sourdough-guide__sourdough-man-image">
+                <img src="../images/sourdough-man.jpg">
             </div>
         </div>
         <include src="foot.html"></include>
