styles for mobile

--- a/src/sourdough-guide/index.html
+++ b/src/sourdough-guide/index.html
@@ -7,8 +7,10 @@
     <body>
         <div class="sourdough-guide">
             <div class="sourdough-guide__title">
-                <icon src="solid/flask.svg" class="icon"></icon>
-                <div md># Sourdough Method</div>
+                <div class="sourdough-guide__title__inner">
+                    <icon src="solid/flask.svg" class="icon"></icon>
+                    <div md># Sourdough Method</div>
+                </div>
             </div>
             <div class="sourdough-guide__header-image">
                 <img src="../images/bread.jpg">
