--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
     <head>
         <include src="head.html"></include>
         <link rel="stylesheet" href="styles.scss">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
         <div class="home">
